// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input Schema > Invalid Input: Get Packages Info Mode 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "tag"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`Input Schema > Invalid Input: Get Packages Info Mode 2`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "tag"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`Input Schema > Invalid Input: No mode 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [],
    "note": "No matching discriminator",
    "discriminator": "mode",
    "path": [
      "mode"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`Input Schema > Invalid Input: No mode 2`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [],
    "note": "No matching discriminator",
    "discriminator": "mode",
    "path": [
      "mode"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`Input Schema > Invalid Input: No mode 3`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [],
    "note": "No matching discriminator",
    "discriminator": "mode",
    "path": [
      "mode"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`Input Schema > Invalid Input: No mode 4`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [],
    "note": "No matching discriminator",
    "discriminator": "mode",
    "path": [
      "mode"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`Input Schema > Invalid Input: No mode 5`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "errors": [],
    "note": "No matching discriminator",
    "discriminator": "mode",
    "path": [
      "mode"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`Input Schema > Invalid Input: Release Mode 1`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "tag"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`Input Schema > Invalid Input: Release Mode 2`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "githubToken"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`Input Schema > Invalid Input: Release Mode 3`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "invalid_format",
    "format": "regex",
    "pattern": "/^(?:@?[\\\\w\\\\-/]+@)?v?\\\\d+\\\\.\\\\d+\\\\.\\\\d+(?:-[a-zA-Z]+(?:\\\\.\\\\d+)?)?$/",
    "path": [
      "tag"
    ],
    "message": "Invalid string: must match pattern /^(?:@?[\\\\w\\\\-/]+@)?v?\\\\d+\\\\.\\\\d+\\\\.\\\\d+(?:-[a-zA-Z]+(?:\\\\.\\\\d+)?)?$/"
  }
]]
`;

exports[`Input Schema > Valid Input: Get Packages Info Mode 1`] = `
{
  "mode": "get-packages-info",
  "packagesInfoFile": "packages-info.yaml",
  "tag": "v1.0.0",
}
`;

exports[`Input Schema > Valid Input: Get Packages Info Mode 2`] = `
{
  "mode": "get-packages-info",
  "packagesInfoFile": "packages-info.lmao",
  "tag": "v1.0.0",
}
`;

exports[`Input Schema > Valid Input: Release Mode 1`] = `
{
  "changelogFile": "CHANGELOG.md",
  "dryRun": false,
  "githubToken": "ghp_123",
  "mode": "release",
  "tag": "v1.0.0",
  "title": "Release",
}
`;

exports[`Input Schema > Valid Input: Release Mode 2`] = `
{
  "changelogFile": "CHANGELOG.md",
  "dryRun": false,
  "githubToken": "ghp_123",
  "mode": "release",
  "tag": "v1.0.0",
  "title": "Release Title",
}
`;

exports[`Input Schema > Valid Input: Release Mode 3`] = `
{
  "changelogFile": "CHANGELOG-real.md",
  "dryRun": false,
  "githubToken": "ghp_123",
  "mode": "release",
  "tag": "v1.0.0",
  "title": "Release",
}
`;

exports[`Input Schema > Valid Input: Release Mode 4`] = `
{
  "changelogFile": "CHANGELOG.md",
  "dryRun": true,
  "githubToken": "ghp_123",
  "mode": "release",
  "tag": "v1.0.0",
  "title": "Release",
}
`;

exports[`Packages Info Schema > Invalid Case 1`] = `
[ZodError: [
  {
    "expected": "array",
    "code": "invalid_type",
    "path": [
      "packages"
    ],
    "message": "Invalid input: expected array, received undefined"
  }
]]
`;

exports[`Packages Info Schema > Invalid Case 2`] = `
[ZodError: [
  {
    "origin": "array",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "packages"
    ],
    "message": "Too small: expected array to have >=1 items"
  }
]]
`;

exports[`Packages Info Schema > Invalid Case 3`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "packages",
      1,
      "packagePath"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;

exports[`Packages Info Schema > Invalid Case 4`] = `
[ZodError: [
  {
    "expected": "string",
    "code": "invalid_type",
    "path": [
      "packages",
      1,
      "packagePath"
    ],
    "message": "Invalid input: expected string, received undefined"
  }
]]
`;

exports[`Packages Info Schema > Invalid Case 5`] = `
[ZodError: [
  {
    "origin": "string",
    "code": "too_small",
    "minimum": 1,
    "inclusive": true,
    "path": [
      "packages",
      1,
      "changelogPath"
    ],
    "message": "Too small: expected string to have >=1 characters"
  }
]]
`;
